/admin/structure/taxonomy/category
	Create 'Global' category
	Reparent all current categories to 'Global'
	Create empty per-hospital categories for:
		Aarhus Universitetshospital
		Hospitalsenhed Horsens

/admin/structure/views/view/dokumentation/edit
	View add Contextual Filter on field_knowlegde_unit_ref
	Rearrange it so it is before the filter on Emne

Run `php migrate_vejledning.php`

/admin/structure/types/manage/knowlegde/fields 
	Add field "Vejledning gyldig for", field_knowlegde_unit_ref, Entity Reference, Check boxes/radio buttons
	Target type = Taxonomy term
	Number of values = Unlimited
	Entity selection = "Top-level"
	Target bundles = 'Afdelinger'
	Rearrange fields so it is directly below Emne

	Change field_category's widget to Check boxes/radio buttons

/admin/structure/flags/manage/obssheet_unit => Ændre til oversigt
/admin/structure/flags/manage/obssheet_global => Ændre til oversigt
/admin/structure/flags/manage/approve_answer => Ændre til "Markér som løsning" og "Fjern markering som løsning"